Add basic index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-_doxy_/build/api/html/index.html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
+<a href="_doxy_/html/index.html">API documentation of components-mcu"</a>
+</body>
+</html>
+
